# reorganizer

./: README.md  pyproject.toml
src/reorganizer/: convert.py  mappers.py
src/reorganizer/data/: hcp.py  ukb.py
src/stdtobids/: convert.py  mappers.py
src/stdtobids/data/: hcp.py  ukb.py
tests/: test_maps.py
